--- a/sampleproject/pom.xml
+++ b/sampleproject/pom.xml
@@ -15,11 +15,19 @@
   </properties>
 
   <dependencies>
+  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+    	<groupId>org.dom4j</groupId>
+    	<artifactId>dom4j</artifactId>
+    	<version>2.1.3</version>
+	</dependency>
+    
   </dependencies>
 </project>
